# hand-gesture-cv

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run.sh
docs/: steps.md
src/: BGR_sample.cpp
